--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="title_activity_play">Play</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-
+    <string name="connect4">Paris8 - Jeu Puissance 4 </string>
+    <string name="play">JOUER</string>
+    <string name="score">HIGHSCORES</string>
+    <string name="exit">QUITTER</string>
 </resources>
