--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,10 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="connect4">Paris8 - Jeu Puissance 4 </string>
-    <string name="play">JOUER</string>
+    <string name="titletop">uissance 4 </string>
+    <string name="play">1 JOUEUR</string>
+    <string name="multiplay">2 JOUEURS</string>
     <string name="score">HIGHSCORES</string>
+    <string name="about">Apropos</string>
     <string name="exit">QUITTER</string>
 </resources>
