--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="player1">Joueur 1</string>
     <string name="player2">Joueur 2</string>
     <string name="timer">00:00</string>
+    <string name="title_activity_apropos">à propos</string>
+    <string name="txtapropos">ce jeu est réalisé par GOURGAN Hicham et AZIZ , étudiants de l\'université PARIS 8</string>
     
 </resources>
